--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,17 +1,23 @@
-[package]
-name = "wsprism"
-version = "0.1.0"
-edition = "2021"
+[workspace]
+resolver = "2"
+members = ["crates/*"]
 
-[dependencies]
-bytes = "1"
-axum = { version = "0.7", features = ["ws", "macros"] }
-tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal"] }
-futures-util = "0.3"
-serde = { version = "1", features = ["derive"] }
-serde_json = "1"
-thiserror = "1"
-uuid = { version = "1", features = ["v4"] }
-dashmap = "6"
+[workspace.dependencies]
+# Runtime/Logging
+tokio = { version = "1", features = ["full"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+
+# Serialization/Error
+serde = { version = "1", features = ["derive"] }
+serde_json = { version = "1", features = ["raw_value"] }
+serde_yaml = "0.9"
+thiserror = "1"
+
+# Binary
+bytes = "1"
+base64 = "0.21"
+hex = "0.4"
+
+# Internal Crates
+wsprism-core = { path = "crates/wsprism-core" }
