--- a/crates/wsprism-core/Cargo.toml
+++ b/crates/wsprism-core/Cargo.toml
@@ -11,6 +11,5 @@ bytes = { workspace = true }
 tracing = { workspace = true }
 
 [dev-dependencies]
-base64 = { workspace = true }
-hex = { workspace = true }
-serde_json = { workspace = true }
+base64 = "0.22"
+hex = "0.4"
