--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,6 @@ bytes = "1"
 
 # internal crates
 wsprism-core = { path = "crates/wsprism-core" }
+
+axum = { version = "0.7", features = ["ws"] }
+futures-util = "0.3"
