--- a/crates/wsprism-gateway/Cargo.toml
+++ b/crates/wsprism-gateway/Cargo.toml
@@ -12,3 +12,7 @@ thiserror = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 bytes = { workspace = true }
+
+axum = { workspace = true }
+futures-util = { workspace = true }
+serde_json = { workspace = true }
