--- a/crates/wsprism-gateway/Cargo.toml
+++ b/crates/wsprism-gateway/Cargo.toml
@@ -16,3 +16,6 @@ bytes = { workspace = true }
 axum = { workspace = true }
 futures-util = { workspace = true }
 serde_json = { workspace = true }
+
+dashmap = { workspace = true }
+async-trait = { workspace = true }
