--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -24,7 +24,7 @@ jobs:
         run: |
           cargo install mdbook
           cargo install mdbook-mermaid
-          mdbook-mermaid install
+          mdbook-mermaid install docs
 
       - name: Build mdBook
         run: mdbook build docs
